<resources>
    <string name="app_name">Sahay</string>
    <string name="settings">settings</string>
    <string name="logout">Logout</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="paracetamol">After Lunch, 2:00pm\n1 Tablet\n\nAfter Dinner, 8:30pm\n1 Tablet\n\nPARACETAMOL</string>
    <string name="gelusil">After Dinner, 9:00pm\n\n1-1.5 TableSpoon\n\n\n\nGELUSIL</string>
    <string name="pantoprazole">Evening, 5pm\n\n1 Tablet\n\n\nPANTOPRAZOLE</string>
    <string name="folvite">Evening, 6:00pm\n\n1 Tablet\n\n\n\nFOLVITE</string>
    <string name="my_schedule">My Schedule</string>
    <string name="marketplace">MARKETPLACE</string>
    <string name="above_rs_5000">Above Rs.5000</string>
    <string name="less_than_rs_5000">Less than Rs.5000</string>
    <string name="_5_estimated_monthly_budget">5. Estimated Monthly Budget</string>
    <string name="describe_the_help_needed">Describe the help needed</string>
    <string name="_4_what_help_is_exactly_needed">4. What Help is Exactly Needed?</string>
    <string name="within_60_days">Within 60 days</string>
    <string name="within_a_month">Within a month</string>
    <string name="right_now">Right now</string>
    <string name="_3_how_soon_do_you_need_someone">3. How Soon Do You Need Someone?</string>
    <string name="others">Others</string>
    <string name="parents">Parents</string>
    <string name="myself">Myself</string>
    <string name="spouse">Spouse</string>
    <string name="_2_who_needs_care">2. Who Needs Care?</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="_1_confirm_your_address">1. Confirm Your Address</string>
    <string name="find_in_home_care">Find In-home Care</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="verify">Verify</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="your_schedule">Your Schedule</string>
    <string name="elder_care_services_image">Elder Care Services Image</string>
    <string name="elder_care_services">Elder Care Services</string>
    <string name="explore_now">Explore Now</string>
    <string name="todo">TODO</string>
</resources>